--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "vitest":"vitest run"
+    "vitest": "vitest run --coverage --config ./vitest.config.ts"
   },
   "dependencies": {
     "vue": "^3.2.25"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.0.0",
+    "@vitejs/plugin-vue": "^2.3.4",
+    "@vitest/coverage-c8": "^0.23.4",
+    "@vue/test-utils": "^2.0.2",
+    "@vue/tsconfig": "^0.1.3",
+    "jsdom": "^20.0.0",
     "sass": "^1.49.0",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
