--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "vitest": "vitest run --coverage --config ./vitest.config.ts"
+    "vitest": "vitest run --coverage --config ./vitest.config.ts",
+    "prepare": "husky install"
+  },
+  "eslintConfig": {
+    "extends": [
+      "prettier"
+    ]
   },
   "dependencies": {
     "vue": "^3.2.25"
@@ -15,11 +21,19 @@
     "@vitest/coverage-c8": "^0.23.4",
     "@vue/test-utils": "^2.0.2",
     "@vue/tsconfig": "^0.1.3",
+    "eslint": "^8.23.1",
+    "eslint-config-prettier": "^8.5.0",
+    "husky": "^8.0.1",
     "jsdom": "^20.0.0",
+    "lint-staged": "^13.0.3",
+    "prettier": "2.7.1",
     "sass": "^1.49.0",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
     "vitest": "^0.23.4",
     "vue-tsc": "^0.29.8"
+  },
+  "lint-staged": {
+    "*.{js,css,md}": "prettier --write"
   }
 }
