--- a/package.json
+++ b/package.json
@@ -33,6 +33,11 @@
     "vitest": "^0.23.4",
     "vue-tsc": "^0.29.8"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
     "*.{js,css,md}": "prettier --write"
   }
