--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,5 +2,10 @@
   "tabWidth": 2,
   "singleQuote": true,
   "bracketSameLine": true,
-  "bracketSpacing": true
+  "bracketSpacing": true,
+  "insert_final_newline": true,
+  "end_of_line": "lf",
+  "indent_style": "space",
+  "indent_size": 2,
+  "max_line_length": 80
 }
