--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
     "@vitejs/plugin-vue": "^2.3.4",
     "@vitest/coverage-c8": "^0.23.4",
     "@vue/test-utils": "^2.0.2",
@@ -35,7 +37,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged",
+      "commit-msg":"commitlint -E HUSKY_GIT_PARAMS"
     }
   },
   "lint-staged": {
