--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
+    "@commitlint/types": "^17.0.0",
     "@vitejs/plugin-vue": "^2.3.4",
     "@vitest/coverage-c8": "^0.23.4",
     "@vue/test-utils": "^2.0.2",
